# sound-monitor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py
src/sound_monitor/: __init__.py  _cluster.py  _date.py  _logger.py  _publish.py  _record.py  cli.py  sm_publish.py  sm_record.py
src/sound_monitor/config/: defaults_for_recording.yaml  record_example.yaml
tests/: test_package.py
